--- a/.github/workflows/maven-github-packages-deploy.yaml
+++ b/.github/workflows/maven-github-packages-deploy.yaml
@@ -14,6 +14,7 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+          server-id: github
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
