--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,15 @@
     <distributionManagement>
         <snapshotRepository>
             <id>github-snapshot</id>
-            <name>GitHub Packages</name>
+            <name>GitHub snapshot</name>
             <url>https://maven.pkg.github.com/juliengalet/reactor-flow</url>
+            <uniqueVersion>true</uniqueVersion>
         </snapshotRepository>
         <repository>
-            <id>github</id>
-            <name>GitHub Packages</name>
+            <id>github-release</id>
+            <name>GitHub release</name>
             <url>https://maven.pkg.github.com/juliengalet/reactor-flow</url>
+            <uniqueVersion>false</uniqueVersion>
         </repository>
     </distributionManagement>
 
@@ -68,6 +70,7 @@
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
         <maven-site-plugin.version>3.7.1</maven-site-plugin.version>
         <maven-project-info-reports-plugin.version>3.1.1</maven-project-info-reports-plugin.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <sonar.projectKey>juliengalet_reactor-flow</sonar.projectKey>
         <sonar.organization>juliengalet</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -114,6 +117,18 @@
 
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>${maven-release-plugin.version}</version>
+                    <configuration>
+                        <tagNameFormat>v@{project.version}</tagNameFormat>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
