--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>fr.jtools</groupId>
     <artifactId>reactor-flow</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.1-SNAPSHOT</version>
     <description>
         A library to execute flows with reactor. Inspired by https://github.com/j-easy/easy-flows project.
     </description>
@@ -14,7 +14,7 @@
         <url>git@github.com:juliengalet/reactor-flow.git</url>
         <connection>scm:git:https://github.com/juliengalet/reactor-flow</connection>
         <developerConnection>scm:git:https://github.com/juliengalet/reactor-flow</developerConnection>
-        <tag>v1.1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
