--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,13 @@
 
     <distributionManagement>
         <snapshotRepository>
-            <id>github-snapshot</id>
+            <id>github</id>
             <name>GitHub snapshot</name>
             <url>https://maven.pkg.github.com/juliengalet/reactor-flow</url>
             <uniqueVersion>true</uniqueVersion>
         </snapshotRepository>
         <repository>
-            <id>github-release</id>
+            <id>github</id>
             <name>GitHub release</name>
             <url>https://maven.pkg.github.com/juliengalet/reactor-flow</url>
             <uniqueVersion>false</uniqueVersion>
@@ -57,7 +57,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <reactor.version>3.4.4</reactor.version>
+        <reactor.version>3.4.12</reactor.version>
         <junit.version>5.7.0</junit.version>
         <assertj.version>3.19.0</assertj.version>
         <jacoco.version>0.8.5</jacoco.version>
@@ -80,6 +80,7 @@
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
             <version>${reactor.version}</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
