--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -28,7 +28,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn $MAVEN_ARGS -DskipTests verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+        run: mvn $MAVEN_ARGS verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
 
       - name: Build
         env:
